--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "*",
     "@ffmpeg/util": "*",
+    "@google/generative-ai": "^0.24.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@remotion/media-parser": "^4.0.290",
     "@remotion/player": "^4.0.290",
